fixed selected course alignment.

--- a/main.css
+++ b/main.css
@@ -19,15 +19,14 @@
 .period-selection {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;
 	width: 100%;
 	height: 25%;
 }
 
 .selected-course {
-	width: 35%;
+	width: 40%;
 	margin: 7px;
-	padding: 1vw 1vw 1vw 1vw;
+	padding: 1em 1em 1em 1em;
 	border-radius: 3px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
